--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <li>item 2</li>
         <li>item 3</li>
     </ul>
-    <img src=""
+    <img src="goldfish.jpg" alt="A goldfish">
 </body>
 </html>
