added picture and css stuff including an animation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <li>item 2</li>
         <li>item 3</li>
     </ul>
-    <img src="goldfish.jpg" alt="A goldfish">
+    <div>
+        <img src="goldfish.jpg" alt="A goldfish" id="pi">
+        <br>
+        <img src="goldfish.jpg" alt="A goldfish" id="pic">
+    </div>
 </body>
 </html>
